<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_activity_barber_profile">BarberProfile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="phone">Phone</string>
    <string name="store_name">Store Name</string>
    <string name="storename">StoreName</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="city">City</string>
    <string name="postalcode">PostalCode</string>
    <string name="postal_code">Postal Code</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="store_name">Store Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="edit">Edit</string>
    <string name="postal_code">Postal Code</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="customer">Customer</string>
    <string name="barber">Barber</string>
    <string name="user_type">User Type</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="post_code">Post Code</string>
    <string name="smith">Smith</string>
    <string name="john">John</string>
    <string name="l6p_7s3">L6P 7S3</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="store_name">Store Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="rate">Rate?</string>
</resources>
