<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amuna95.finalproject.UserProfile">

    <include
        layout="@layout/action_bar"
        android:id="@+id/action_bar">
    </include>

    <TextView
        android:id="@+id/fnamelbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="92dp"
        android:text="@string/first_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lnamelbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fnamelbl"
        android:layout_below="@+id/fnamelbl"
        android:layout_marginTop="46dp"
        android:text="@string/last_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pclbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lnamelbl"
        android:layout_below="@+id/lnamelbl"
        android:layout_marginTop="52dp"
        android:text="@string/post_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/fnametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fnamelbl"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/john"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lnametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lnamelbl"
        android:layout_alignStart="@+id/fnametxt"
        android:ems="10"
        android:hint="@string/smith"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pctxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pclbl"
        android:layout_alignStart="@+id/lnametxt"
        android:ems="10"
        android:hint="@string/l6p_7s3"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pclbl"
        android:layout_marginTop="49dp"
        android:layout_toStartOf="@+id/editbtn"
        android:text="@string/save" />

    <Button
        android:id="@+id/editbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/savebtn"
        android:layout_alignBottom="@+id/savebtn"
        android:layout_alignStart="@+id/pctxt"
        android:layout_marginStart="62dp"
        android:text="@string/edit" />

</RelativeLayout>