<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amuna95.finalproject.BarberProfile$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tabName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/section_label"
        android:layout_marginTop="18dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tabDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tabName"
        android:layout_marginTop="25dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/lblStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tabDescription"
        android:layout_marginTop="22dp"
        android:text="@string/store_name" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblStore"
        android:layout_marginTop="19dp"
        android:layout_toEndOf="@+id/section_label"
        android:text="@string/address" />

    <TextView
        android:id="@+id/lblCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblAddress"
        android:layout_marginTop="19dp"
        android:layout_toEndOf="@+id/section_label"
        android:text="@string/city" />

    <TextView
        android:id="@+id/lblPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCity"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/section_label"
        android:text="@string/postal_code" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tabName"
        android:layout_marginEnd="78dp"
        android:text="@string/phone" />

</RelativeLayout>
