<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amuna95.finalproject.BarberProfileEdit">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:text="Name" />

    <EditText
        android:id="@+id/fldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lblName"
        android:layout_below="@+id/lblName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fldDescription"
        android:layout_below="@+id/fldName"
        android:layout_marginTop="14dp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/fldDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fldName"
        android:layout_alignTop="@+id/lblDescription"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fldDescription"
        android:layout_below="@+id/fldDescription"
        android:layout_marginTop="14dp"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/fldPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lblPhone"
        android:layout_below="@+id/lblPhone"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/lblStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fldStoreName"
        android:layout_below="@+id/fldPhone"
        android:layout_marginTop="18dp"
        android:text="@string/store_name" />

    <EditText
        android:id="@+id/fldStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fldPhone"
        android:layout_below="@+id/lblStoreName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/storename" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fldStoreName"
        android:layout_below="@+id/fldStoreName"
        android:layout_marginTop="11dp"
        android:text="@string/address" />

    <EditText
        android:id="@+id/fldAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lblAddress"
        android:layout_below="@+id/lblAddress"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Address" />

    <TextView
        android:id="@+id/lblCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fldAddress"
        android:layout_below="@+id/fldAddress"
        android:layout_marginTop="12dp"
        android:text="@string/city" />

    <EditText
        android:id="@+id/fldCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fldAddress"
        android:layout_below="@+id/lblCity"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/city" />

    <TextView
        android:id="@+id/lblPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fldCity"
        android:layout_below="@+id/fldCity"
        android:layout_marginTop="13dp"
        android:text="@string/postalcode" />

    <EditText
        android:id="@+id/fldPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fldCity"
        android:layout_below="@+id/lblPostalCode"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/postal_code" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fldPostalCode"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:onClick="onClickSave"
        android:text="@string/save" />
</RelativeLayout>
